--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-  "name": "Shonans/php-validate",
+  "name": "shonans/php-validate",
   "type": "library",
   "description": "fixed with inhere's php-validate",
   "keywords": [
